--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.2",
     "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^6.0.7"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
